<resources>
    <string name="app_name">Magic Eye Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Magic Eye Learning Center</string>
    <string name="nav_header_subtitle">Admin App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    fragment label-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="student_registration">Registration</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="course">Course</string>
    <string name="visible">Visible</string>
    <string name="upload">Upload</string>
    <string name="Content">Content</string>
    <string name="video">Video</string>
    <string name="pdf">Pdf</string>
    <string name="link">Link</string>
    <string name="video_name">Video Name</string>
    <string name="select_video">Select Video</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_setting">Setting</string>
    <string name="video_link">Video Link</string>
    <string name="link_name">Name</string>
</resources>