<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large">

        <LinearLayout
            android:padding="@dimen/spacing_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:padding="@dimen/spacing_middle"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_normal_size"
                android:id="@+id/tv_video_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"/>
            <EditText
                android:id="@+id/et_uploadVideo_name"
                style="@style/et_TextBox"
                android:layout_gravity="top"
                android:background="@drawable/edittext_border"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/video_name"
                android:inputType="text" />
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/et_uploadVideo_link"
                style="@style/et_TextBox"
                android:layout_gravity="top"
                android:background="@drawable/edittext_border"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/video_link"
                android:inputType="text" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/visible"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/rg_uploadVideo"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rb_uploadVideo_true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="True"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_normal_size" />
                        <RadioButton
                            android:id="@+id/rb_uploadVideo_false"
                            android:layout_marginStart="@dimen/spacing_large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="False"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_normal_size" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>




        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btn_uploadVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/spacing_middle"
        android:background="@drawable/radius_bth"
        android:fontFamily="@font/montserrat_regular"
        android:paddingStart="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_btn_size" />

</LinearLayout>